; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/xmllite/extr_writer.c_free_element.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/xmllite/extr_writer.c_free_element.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.element = type { %struct.element* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.element*)* @free_element to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_element(i32* %0, %struct.element* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.element*, align 8
  store i32* %0, i32** %3, align 8
  store %struct.element* %1, %struct.element** %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = load %struct.element*, %struct.element** %4, align 8
  %7 = getelementptr inbounds %struct.element, %struct.element* %6, i32 0, i32 0
  %8 = load %struct.element*, %struct.element** %7, align 8
  %9 = call i32 @writer_free(i32* %5, %struct.element* %8)
  %10 = load i32*, i32** %3, align 8
  %11 = load %struct.element*, %struct.element** %4, align 8
  %12 = call i32 @writer_free(i32* %10, %struct.element* %11)
  ret void
}

declare dso_local i32 @writer_free(i32*, %struct.element*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
